# fossgraph

./: .editorconfig  .gitignore  Cargo.toml  README.md
fossgraph/: Cargo.toml
fossgraph-fetcher/: Cargo.toml
fossgraph-fetcher/src/: lib.rs  main.rs  zip_util.rs
fossgraph-fetcher/src/registry/: npm.rs
fossgraph/src/: dependency.rs
fossgraph/src/dependency/: normalize.rs
fossgraph/src/dependency/normalize/: yarn_berry.rs
