[package]
name = "fossgraph-fetcher"
version = "0.0.0"
authors = ["Hyeseong Kim <tim@daangn.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1.4"
flate2 = "1.0"
reqwest = "0.11"
tar = "0.4"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
zip = "0.6"

fossgraph-core = { path = "../fossgraph" }
