[package]
name = "fossgraph-core"
version = "0.0.0"
authors = ["Hyeseong Kim <tim@daangn.com>"]
edition = "2021"

[dependencies]
fancy-regex = "0.11"
indoc = "2"
lazy_static = "1.4.0"
percent-encoding = "2.2"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.7.4"
thiserror = "1.0"
url = "2.4"
